Adding more story candidates

--- a/newsletter/2021-03-14.html
+++ b/newsletter/2021-03-14.html
@@ -4,9 +4,27 @@
 
     Some story candidates...
 
+    - The Ethereum community is moving forward with a plan that could lead to lower gas fees and more limited supply of the token. https://www.coindesk.com/ethereum-improvement-proposal-1559-london-hard-fork
+
+    - A new exchange-traded fund has been proposed that would use Grayscale's investment fund to sidestep US regulators' reluctance to approve a more straightforward bitcoin ETF. https://www.coindesk.com/planned-etf-would-invest-in-grayscales-gbtc-to-sidestep-secs-crypto-reluctance
+
+    - Blockstream has announced a partnership with the newly-launched Seetee to accelerate renewable energy use for bitcoin mining. https://bitcoinmagazine.com/business/seetee-partners-with-blockstream-for-bitcoin-mining-development | Seetee shareholder letter: https://www.seetee.io/static/shareholder_letter-6ae7e85717c28831bf1c0eca1d632722.pdf
+
     - New bitcoin record above $60K. It's been handily beating every other type of investable asset in sight. https://finance.yahoo.com/news/bitcoin-2021-returns-destroy-everything-223544895.html
 
-    - A piece of digital art rendered as a non-fungible token sold for $69 million at auction. https://www.nytimes.com/2021/03/11/arts/design/nft-auction-christies-beeple.html
+    - On Mar. 12, Microsoft President Brad Smith testified before the House Committee on the Judiciary, Subcommittee on Antitrust, Commercial, and Administrative Law. https://blogs.microsoft.com/on-the-issues/2021/03/12/technology-and-the-free-press-the-need-for-healthy-journalism-in-a-healthy-democracy/
+
+    - @jack is auctioning off is first tweet as an NFT: https://twitter.com/jack/status/1367990471759306752?s=21
+
+    - JP Morgan is going to begin offering clients an investment vehicle that bundles the debt of companies with bitcoin exposure. MicroStrategy, Square, and Riot Blockchain will be among the issuers included in the basket. https://www.coindesk.com/jpmorgan-to-launch-cryptocurrency-exposure-basket-of-bitcoin-proxy-stocks
+
+    - Wyoming lawmakers are weighing a bill to recognize DAOs as companies. https://www.coindesk.com/wyoming-bill-recognize-daos-senate
+
+    - BlockFi just raised $350M at a $3B valuation. https://www.coindesk.com/crypto-lender-blockfi-raises-350m-at-a-3b-valuation
+
+    - In a darker twist on the NFT craze, cybersecurity exploits are being tokenized and sold. https://www.coindesk.com/hacker-selling-cybersecurity-exploit-nft
+
+    - A piece of digital art rendered as a non-fungible token sold for $69 million at auction. https://www.nytimes.com/2021/03/11/arts/design/nft-auction-christies-beeple.html | Bloomberg: https://www.bloomberg.com/news/articles/2021-03-11/beeple-everydays-nft-sells-at-art-auction-for-60-million-paid-in-ether
 
     - A new Stanford report says AI is going industrial (https://www.axios.com/state-of-artificial-intelligence-stanford-university-f5d71c41-251e-4fb4-b9b2-89fdee48bb3c.html) Also a new database of AI mishaps was launched. https://incidentdatabase.ai/
 
