Adding some links from CoinDesk, TheMerkle, and LongDash

--- a/newsletter/2021-03-21.html
+++ b/newsletter/2021-03-21.html
@@ -1,5 +1,30 @@
 <doctype html>
 
+        <!--
+
+        Some story candidates for the next newsletter. Will narrow down this list as the week goes on...
+
+        - Consumers are resurgent in the bitcoin market. Americans could spend up to $40B in stimulus payments on bitcoin, according to CoinDesk's Breakdown podcast. https://www.coindesk.com/podcasts/coindesk-podcast-network/americans-spend-40b-stimulus-payments-bitcoin   | Text-y version of the story: https://www.coindesk.com/nearly-40b-in-us-stimulus-checks-may-be-spent-on-bitcoin-and-stocks-mizuho-survey |  Retail buying of bitcoin this quarter is outpacing institutional investment, according to a new JPMorgan analysis. https://www.coindesk.com/bitcoin-retail-flows-jpmorgan | Meanwhile, the asset has topped $1T in valuation. https://www.coindesk.com/bitcoin-dollar-okcoin-bsv-and-bch
+
+        - CoinDesk: Investview Says It Holds More Than $1M in Crypto on Its Balance Sheet: https://www.coindesk.com/investview-says-it-holds-more-than-1m-in-crypto-on-its-balance-sheet
+
+        - Algorithmic yield farming is now a Thing. https://themerkle.com/algorithmic-yield-farming/
+
+        - CoinDesk: Jack Ma’s Ant Group leads the way in blockchain patents, according to Clarivate’s Derwent World Patents Index (DWPI), a ranking dominated by Chinese companies. The Alibaba affiliate retained its spot at the top of the index, which aggregates patents filed for both quantity and quality, according to research by International Asset Management (IAM) published Friday using the DWPI data. https://www.coindesk.com/ant-group-leads-chinese-dominated-2020-list-of-blockchain-patents
+
+        - NFT art is transforming the art market... https://www.longhash.com/en/news/3441?f=r
+
+ 
+        -->
+  
+  
+  
+  
+  
+  
+  
+  
+  
 <html lang="en">
 
   <head>
@@ -50,16 +75,6 @@
       <span id="flag">
         <span><img src="https://indizr.com/img/w3w-logo-1000-white-orange.png" alt="#Web3 Weekly"></span>
         <h4>March 14-20, 2021</h4></span>
-
-        <!--
-
-        Some story candidates...
-
-        - tk
-        - tk
-        - tk
-
-        -->
 
         <br>
 
