Adding links on BTC privacy, NFTs, etc.

--- a/newsletter/2021-03-21.html
+++ b/newsletter/2021-03-21.html
@@ -4,17 +4,49 @@
 
         Some story candidates for the next newsletter. Will narrow down this list as the week goes on...
 
+        - From Laura Shin, a great discussion of environmental discussion of environmental impact of NFTs. https://unchainedpodcast.com/why-this-environmentalist-doesnt-blame-creators-for-the-carbon-footprint-of-nfts/
+
+        - More crypto exchanges are going public. In addition to Coinbase's planned stock offering, it now seems rivals Kraken and eToro are taking steps to offer their shares to investors as well. https://www.globenewswire.com/news-release/2021/03/16/2193475/0/en/eToro-the-world-s-leading-social-investment-network-to-become-publicly-traded-through-business-combination-with-FinTech-Acquisition-Corp-V.html  | https://www.theblockcrypto.com/linked/98587/crypto-exchange-kraken-direct-listing-plan-2022
+
+        - The recent buyer of a record-setting NFT came forward. Turns out it's a user who goes by MetaKovan. https://www.washingtonpost.com/technology/2021/03/17/nft-beeple-metakovan-christies/
+        
         - Consumers are resurgent in the bitcoin market. Americans could spend up to $40B in stimulus payments on bitcoin, according to CoinDesk's Breakdown podcast. https://www.coindesk.com/podcasts/coindesk-podcast-network/americans-spend-40b-stimulus-payments-bitcoin   | Text-y version of the story: https://www.coindesk.com/nearly-40b-in-us-stimulus-checks-may-be-spent-on-bitcoin-and-stocks-mizuho-survey |  Retail buying of bitcoin this quarter is outpacing institutional investment, according to a new JPMorgan analysis. https://www.coindesk.com/bitcoin-retail-flows-jpmorgan | Meanwhile, the asset has topped $1T in valuation. https://www.coindesk.com/bitcoin-dollar-okcoin-bsv-and-bch
 
+        - BitMEX founder and former CEO Arthur Hayes intends to voluntarily surrender to U.S. authorities next month on a proposed $10 million bail. https://www.theblockcrypto.com/linked/98579/bitmex-arthur-hayes-surrender-april-proposed-10-million-bail
+
+        - The Onion published a guide to NFTs. https://www.theonion.com/the-onion-s-guide-to-nfts-1846489288
+ 
+
         - CoinDesk: Investview Says It Holds More Than $1M in Crypto on Its Balance Sheet: https://www.coindesk.com/investview-says-it-holds-more-than-1m-in-crypto-on-its-balance-sheet
+
+        - The FBI’s annual Internet Crime Report is out and it shows that hackers and other cybercriminals ran wild during 2020, breaking new records and likely costing Americans billions of dollars. https://gizmodo.com/cybercrime-is-booming-and-its-costing-america-billions-1846503330
 
         - Algorithmic yield farming is now a Thing. https://themerkle.com/algorithmic-yield-farming/
 
         - CoinDesk: Jack Ma’s Ant Group leads the way in blockchain patents, according to Clarivate’s Derwent World Patents Index (DWPI), a ranking dominated by Chinese companies. The Alibaba affiliate retained its spot at the top of the index, which aggregates patents filed for both quantity and quality, according to research by International Asset Management (IAM) published Friday using the DWPI data. https://www.coindesk.com/ant-group-leads-chinese-dominated-2020-list-of-blockchain-patents
 
+        - DuckDuckGo pored over new metrics about Google's collection of user data. https://twitter.com/DuckDuckGo/status/1371509053613084679
+
         - NFT art is transforming the art market... https://www.longhash.com/en/news/3441?f=r
 
+        - Mark Zuckerberg expounded on clubhouse on journalism's place in the "creator economy." Lauren Goode was not a fan of his take. https://twitter.com/LaurenGoode/status/1372656674201243648
+
+        - ICYMI: a great video from Andreas re: bitcoin privacy. https://twitter.com/aantonop/status/1363775564981616643
+
+
+
+
+These next few aren't really webby, but they're still cool about tech & science more broadly. Could be fun to include one in the roundup...
+
+        - Bill Gates blogged about the outsized impact climate change is likely to have on the world's poor. https://www.gatesnotes.com/Energy/Helping-the-worlds-poorest-adapt-to-climate-change
+
+        - A mouse embryo has been grown in an artificial womb. Humans could be next. https://www.technologyreview.com/2021/03/17/1020969/mouse-embryo-grown-in-a-jar-humans-next/
+
+        - Scientists want to store DNA of 6.7 million species on the moon, just in case this whole earth thing doesn't work out. https://www.space.com/proposed-lunar-ark-for-biodiversity
  
+        - A monster antimatter particle just slammed into Antarctica in 2016. https://www.space.com/extreme-neutrino-hits-antarctica
+
+
         -->
   
   
