Adding new ICO calendar from CoinMarketCap

--- a/newsletter/2021-03-21.html
+++ b/newsletter/2021-03-21.html
@@ -6,6 +6,8 @@
 
         - From Laura Shin, a great discussion of environmental discussion of environmental impact of NFTs. https://unchainedpodcast.com/why-this-environmentalist-doesnt-blame-creators-for-the-carbon-footprint-of-nfts/
 
+        - CoinMarketCap has added a new ICO calendar. Handy! https://coinmarketcap.com/ico-calendar/
+
         - More crypto exchanges are going public. In addition to Coinbase's planned stock offering, it now seems rivals Kraken and eToro are taking steps to offer their shares to investors as well. https://www.globenewswire.com/news-release/2021/03/16/2193475/0/en/eToro-the-world-s-leading-social-investment-network-to-become-publicly-traded-through-business-combination-with-FinTech-Acquisition-Corp-V.html  | https://www.theblockcrypto.com/linked/98587/crypto-exchange-kraken-direct-listing-plan-2022
 
         - The recent buyer of a record-setting NFT came forward. Turns out it's a user who goes by MetaKovan. https://www.washingtonpost.com/technology/2021/03/17/nft-beeple-metakovan-christies/
