Adding story links re: Uniswap V3, Ripple, and Crypto.com.

--- a/newsletter/2021-03-28.html
+++ b/newsletter/2021-03-28.html
@@ -6,8 +6,13 @@
 
   Some story candidates...
 
-  - tk
-  - tk 
+  - Uniswap unveils v3 plan -- https://uniswap.org/blog/uniswap-v3/
+
+  - Ripple published a whitepaper covering its potential for use in central bank digital currencies. https://www.coindesk.com/ripple-touts-role-for-xrp-in-central-bank-digital-currency-white-paper
+
+  - Crypto.com launched a new NFT platform with content from Snoop Dogg, Lionel Richie, and other famous creators. https://www.coindesk.com/crypto-com-nft-platform-snoop-dogg-lionel-ritchie
+
+  -
 
 
 
