Adding links on Tesla/bitcoin + a lot more

--- a/newsletter/2021-03-28.html
+++ b/newsletter/2021-03-28.html
@@ -2,22 +2,59 @@
 
 <html lang="en">
 
+  
+  
   <!--
+
+
+
 
   Some story candidates...
 
-  - Uniswap unveils v3 plan -- https://uniswap.org/blog/uniswap-v3/
+
+
+  - Uniswap unveils v3 plan -- https://uniswap.org/blog/uniswap-v3/  Upgrade is supposedly 400x more capital efficient. https://www.theblockcrypto.com/post/99100/uniswap-v3-capital-efficiency-details-dex-ethereum
+
+  - Brian Armstrong's stake in Coinbase is worth over $14 billion, CNBC reports. https://www.cnbc.com/2021/03/23/coinbase-ceo-armstrong-owns-close-to-14-billion-of-stock-before-debut.html  | Coinbase is rare as a growth company that's also profitable. https://generalist.mirror.xyz/Zgfy7QpX2YR8wAKSlkyEP2MK4qL86fcbbKiqgcuCuMY
+
+- Fidelity wants to offer a bitcoin ETF. https://www.theblockcrypto.com/linked/99279/fidelity-bitcoin-etf-filing
+
+- MIT Tech Review checks in on the pros and cons of the NFT art market. https://www.technologyreview.com/2021/03/25/1021215/nft-artists-scams-profit-environment-blockchain/
+
+- Tennis star Serena Williams is investing in Lolli, a startup offering bitcoin-based rewards for consumer purchases. https://www.youtube.com/watch?v=T1HDwZ0HKnY
+
+- Kraken growth lead Dan Held says a "bitcoin aristocracy" could be on the way if the token rallies to seven-figure price levels or more over the long haul. https://www.youtube.com/watch?v=fqYsUInhDeY
+
+- Here's how anyone can train to be an astronaut. https://www.technologyreview.com/2021/03/24/1021191/private-astronaut-civilian-training-commercial-space/
+
+- More than one-in-five company executives expect a reduction in office space in the coming year, according to the American Institute of CPAs survey. https://www.bloomberg.com/news/articles/2021-03-25/office-cuts-are-coming-with-20-of-u-s-companies-paring-space
+
+- Goldman Sachs wants to offer clients new notes pegged to the ARK Innovation ETF. https://www.coindesk.com/goldman-applies-to-offer-notes-linked-to-an-ark-etf-that-may-have-bitcoin-exposure
 
   - Ripple published a whitepaper covering its potential for use in central bank digital currencies. https://www.coindesk.com/ripple-touts-role-for-xrp-in-central-bank-digital-currency-white-paper
 
   - Crypto.com launched a new NFT platform with content from Snoop Dogg, Lionel Richie, and other famous creators. https://www.coindesk.com/crypto-com-nft-platform-snoop-dogg-lionel-ritchie
 
-  -
+  - The recording industry is complaining to congress about alleged theft of intellectual property on Twitter. https://variety.com/2021/digital/news/riaa-nmpa-twitter-rampant-theft-letter-congress-1234938173/
 
+- South Korea is laying the groundwork for new crypto regulations. https://bitcoinist.com/breaking-down-what-south-koreas-crypto-crackdown-means-for-the-industry/
 
+- According to Ethereum data provider, Etherscan, there are currently over 830 projects which are based on the ERC-20 token standard with over 350,000 token contracts. https://bitcoinist.com/leading-tokens-that-use-the-most-popular-standard-erc-20/
+
+- Tesla is now accepting bitcoin as payment for its cars. https://twitter.com/elonmusk/status/1374617643446063105?s=21
+
+- Global anti-money laundering watchdog FATF released draft guidance extending a critical definition to include DeFi and NFTs. https://decrypt.co/62600/fatf-money-laundering-rules-defi-nfts
 
   -->
 
+  
+  
+  
+  
+  
+  
+  
+  
   <head>
 
 
