Adding links on SNL, Medium, ION, and Visa.

--- a/newsletter/2021-04-04.html
+++ b/newsletter/2021-04-04.html
@@ -4,9 +4,13 @@
 
   Some story candidates...
 
-  - tk
-  - tk
-  - tk
+  - Bloodletting at Medium. The popular long-form writing platform is cutting back its publications staff, focusing more on serving individual writers. https://www.nytimes.com/2021/03/23/business/media/medium-editorial-buyout.html | Ev's full email announcing the change: https://ev.medium.com/medium-editorial-team-update-8679bcb9fe81
+
+  - SNL did an NFT skit. It was hilarious -- and actuallya pretty good explainer for newbies. https://www.youtube.com/watch?v=mrNOYudaMAc
+
+  - Reuters reports that Visa will accept crypto for payment settlements. https://www.reuters.com/article/idUSB8N27V00M
+
+  - Microsoft launched a new decentralized identity platform, dubbed ION, on the bitcoin chain. The launch opens the tantalizing possibility of doing away with traditional usernames and passwords to access online services. https://www.benzinga.com/markets/cryptocurrency/21/03/20359787/microsoft-launches-decentralized-identity-platform-ion-on-bitcoins-blockchain
 
 
 
