Adding links on Paypal rollout of crypto payments, etc.

--- a/newsletter/2021-04-04.html
+++ b/newsletter/2021-04-04.html
@@ -6,13 +6,20 @@
 
   - Bloodletting at Medium. The popular long-form writing platform is cutting back its publications staff, focusing more on serving individual writers. https://www.nytimes.com/2021/03/23/business/media/medium-editorial-buyout.html | Ev's full email announcing the change: https://ev.medium.com/medium-editorial-team-update-8679bcb9fe81
 
-  - SNL did an NFT skit. It was hilarious -- and actuallya pretty good explainer for newbies. https://www.youtube.com/watch?v=mrNOYudaMAc
 
   - Reuters reports that Visa will accept crypto for payment settlements. https://www.reuters.com/article/idUSB8N27V00M
 
   - Microsoft launched a new decentralized identity platform, dubbed ION, on the bitcoin chain. The launch opens the tantalizing possibility of doing away with traditional usernames and passwords to access online services. https://www.benzinga.com/markets/cryptocurrency/21/03/20359787/microsoft-launches-decentralized-identity-platform-ion-on-bitcoins-blockchain
 
+  - AT&T is lobbying against nationwide fiberoptic internet service in the U.S. https://arstechnica.com/tech-policy/2021/03/att-lobbies-against-nationwide-fiber-says-10mbps-uploads-are-good-enough/ 
 
+  - From Reuters: PayPal Holdings Inc will announce later on Tuesday that it has started allowing U.S. consumers to use their cryptocurrency holdings to pay at millions of its online merchants globally, a move that could significantly boost use of digital assets in everyday commerce. https://www.reuters.com/article/us-crypto-currency-paypal-exclusive-idUSKBN2BM10N
+
+  - Michael Casey and Sheila Warren hosted an online discussion of Argentina as a potential use case for bitcoin as an alternative currency. https://www.youtube.com/watch?v=d9HBhaafTY4
+
+  - MIT Technology Review had some disturbing stories on recent Big Tech moves. Amazon seems to be seeding deepfake Twitter accounts by "workers" opposing efforts to unionize its warehouses. https://www.technologyreview.com/2021/03/31/1021487/deepfake-amazon-workers-are-sowing-confusion-on-twitter-thats-not-the-problem/  | Google broke up a counterterrorism investigation by a Western government. https://www.technologyreview.com/2021/03/26/1021318/google-security-shut-down-counter-terrorist-us-ally/
+
+  - SNL did an NFT skit. It was hilarious -- and actuallya pretty good explainer for newbies. https://www.youtube.com/watch?v=mrNOYudaMAc
 
 
   -->
