Adding a bunch of potential links for next newsletter from The Block, CoinDesk, WaPo, and more.

--- a/newsletter/2021-04-04.html
+++ b/newsletter/2021-04-04.html
@@ -6,8 +6,35 @@
 
   - Bloodletting at Medium. The popular long-form writing platform is cutting back its publications staff, focusing more on serving individual writers. https://www.nytimes.com/2021/03/23/business/media/medium-editorial-buyout.html | Ev's full email announcing the change: https://ev.medium.com/medium-editorial-team-update-8679bcb9fe81
 
-
   - Reuters reports that Visa will accept crypto for payment settlements. https://www.reuters.com/article/idUSB8N27V00M
+
+  - Bitcoin hits $60K and Ethereum topped $2K. 
+
+  - There's a way to do in-house phishing tests at a company without being evil to employees. https://hbr.org/2021/04/phishing-tests-are-necessary-but-they-dont-need-to-be-evil?utm_source=feedburner&utm_medium=feed&utm_campaign=Feed%3A+harvardbusiness+%28HBR.org%29
+
+  - NYT tech columnist Brian X. Chen recommended switching to Brave. https://www.nytimes.com/2021/03/31/technology/personaltech/online-privacy-private-browsers.html
+
+  - Microsoft won a $21 billion government contract to build augmented reality devices for the U.S. military.  https://www.washingtonpost.com/business/2021/03/31/microsoft-army-augmented-reality/
+  
+  - His Airness is all over NFTs. Michael Jordan is among the investors in NBA Top Shot, an venture to issue official league collectibles as non-fungible tokens. https://www.coindesk.com/michael-jordan-joins-305m-investment-in-firm-behind-nba-top-shot  | Meanwhile, a msuician is selling a tokenized image of MJ breaking up a fight in a parking lot. https://apnews.com/press-release/newswire/sports-mens-sports-michael-jordan-mens-boxing-boxing-8a607fc98961944f8a952f8ec87cef09 | https://www.espn.com/nba/story/_/id/31164860/dapper-labs-creators-nba-top-shot-get-305m-funding
+
+  - Coinbase's direct listing on Nasdaq is now scheduled for April 14. https://www.theblockcrypto.com/linked/100235/coinbase-direct-listing-april-nasdaq
+
+  - Goldman Sachs will reportedly soon offer its private wealth management clients avenues to invest in bitcoin and other digital currencies. https://www.cnn.com/2021/03/31/investing/goldman-sachs-bitcoin-investing/index.html
+
+  - Venture money is flodding into non-fungible tokens...  Enjin raises nearly $19 million to build Polkadot-based blockchain for NFTs. https://www.theblockcrypto.com/post/99980/enjin-polkadot-based-blockchain-nft-funding  |  NFT marketplace SuperRare raises $9 million in Series A funding round. https://www.theblockcrypto.com/linked/99869/nft-marketplace-superrare-funding-round  |   Zora raised as well. https://www.coindesk.com/zora-gets-in-on-nft-funding-craze-with-8m-raise-sec-documents-show
+
+  - Decentralized publishing platform LBRY didn't register its securities offering, says the SEC. https://decrypt.co/63319/sec-sues-lbry-over-11-million-in-token-sales
+
+  - More U.S. states are scrambling to become crypto havens. The latest is Iowa, where the state House of Representatives recognized the validity of distributed ledger technology and smart contracts. https://decrypt.co/63339/iowa-lawmakers-pass-blockchain-friendly-legislation   ((Wrap in recent developments in WY, TX, HI, IL, etc...))
+
+  - Tether released an assurance report that shows its stablecoins were fully backed as of February. https://www.theblockcrypto.com/post/99806/tether-assurance-report-stablecoins-usdt-fully-backed
+
+  - 
+
+  - 
+
+  - Ericsson is lobbying western governments to treat its competitor, China's Huawei, more leniently. https://www.wsj.com/articles/the-ban-on-huawei-helped-revive-ericsson-but-landed-ceo-in-a-tough-spot-11617204414?mod=hp_lead_pos4
 
   - Microsoft launched a new decentralized identity platform, dubbed ION, on the bitcoin chain. The launch opens the tantalizing possibility of doing away with traditional usernames and passwords to access online services. https://www.benzinga.com/markets/cryptocurrency/21/03/20359787/microsoft-launches-decentralized-identity-platform-ion-on-bitcoins-blockchain
 
@@ -20,7 +47,6 @@
   - MIT Technology Review had some disturbing stories on recent Big Tech moves. Amazon seems to be seeding deepfake Twitter accounts by "workers" opposing efforts to unionize its warehouses. https://www.technologyreview.com/2021/03/31/1021487/deepfake-amazon-workers-are-sowing-confusion-on-twitter-thats-not-the-problem/  | Google broke up a counterterrorism investigation by a Western government. https://www.technologyreview.com/2021/03/26/1021318/google-security-shut-down-counter-terrorist-us-ally/
 
   - SNL did an NFT skit. It was hilarious -- and actuallya pretty good explainer for newbies. https://www.youtube.com/watch?v=mrNOYudaMAc
-
 
   -->
 
