Adding links from FC, WaPo

--- a/newsletter/2021-04-11.html
+++ b/newsletter/2021-04-11.html
@@ -4,8 +4,10 @@
 
   Some story candidates for the next newsletter...
 
-  - tk
-  - tk
+  - Uganda wants a "satellite" version of Senegal's Akon City. https://www.washingtonpost.com/world/2021/04/06/akon-city-uganda/
+
+  - FC: Companies need to actively identify and work toward the future they want to build. https://www.fastcompany.com/90622247/companies-need-to-design-the-future-not-just-react-to-it?partner=rss&utm_source=twitter.com&utm_medium=social&utm_campaign=rss+fastcompany&utm_content=rss
+
   - tk 
 
 -->
