Inserting some headlines, links tk.

--- a/newsletter/2021-04-11.html
+++ b/newsletter/2021-04-11.html
@@ -8,7 +8,23 @@
 
   - FC: Companies need to actively identify and work toward the future they want to build. https://www.fastcompany.com/90622247/companies-need-to-design-the-future-not-just-react-to-it?partner=rss&utm_source=twitter.com&utm_medium=social&utm_campaign=rss+fastcompany&utm_content=rss
 
-  - tk 
+  - Twitter boycott organized by Moore for April 9.
+
+  - Ex-Google engineer's NYT op-ed on sexual harassment she experienced there -- and general disillusionment from work. https://www.nytimes.com/2021/04/07/opinion/google-job-harassment.html
+
+  - Wired's Goode on flaws in social algos. ((Pickup link from Twitter))
+
+  - Tom Brady is launching an NFT company. ((Need link))
+
+  - Thiel on BTC as a national security vulnerability to the US. https://www.bloomberg.com/news/articles/2021-04-07/peter-thiel-calls-bitcoin-a-chinese-financial-weapon-at-virtual-roundtable?sref=Oeyjq8by
+
+  - Dimon says crypto regulations in the US need to happen sooner rather than later. ((Need link))
+
+  - BTC dominance is near a 2-year low. https://www.youtube.com/watch?v=IJ6PjFpVlnY
+
+  - Coinbase killed it on 1Q earnings, offering a window into overall growth of crypto participation. ((Need link))
+
+  - Scientists need more than media training to better communicate with the public. https://www.niemanlab.org/2021/04/scientists-need-to-get-better-at-talking-to-the-public-why-doesnt-training-seem-to-help/
 
 -->
 
