Adding some links from Twitter for 4/11 edition...

--- a/newsletter/2021-04-11.html
+++ b/newsletter/2021-04-11.html
@@ -6,6 +6,10 @@
 
   - Uganda wants a "satellite" version of Senegal's Akon City. https://www.washingtonpost.com/world/2021/04/06/akon-city-uganda/
 
+  - GM and Ford idled more auto plants due to the recent computer chip shortage. https://www.washingtonpost.com/technology/2021/04/08/gm-manufacturing-chip-shortage/
+
+  - Amazon workers at a warehouse in Bessemer, Ala., voted not to unionize. https://www.washingtonpost.com/technology/2021/04/09/amazon-union-vote-bessemer/
+
   - FC: Companies need to actively identify and work toward the future they want to build. https://www.fastcompany.com/90622247/companies-need-to-design-the-future-not-just-react-to-it?partner=rss&utm_source=twitter.com&utm_medium=social&utm_campaign=rss+fastcompany&utm_content=rss
 
   - Twitter boycott organized by Moore for April 9.
@@ -14,9 +18,29 @@
 
   - Wired's Goode on flaws in social algos. ((Pickup link from Twitter))
 
-  - Tom Brady is launching an NFT company. ((Need link))
+  - Twitch says it will ban users for 'severe misconduct' that occurs away from its site. https://www.reuters.com/article/us-twitch-moderation/twitch-will-ban-users-for-severe-misconduct-that-occurs-away-from-its-site-idUSKBN2BU2QJ
+
+  - Tom Brady is launching an NFT company. https://www.theblockcrypto.com/linked/100803/football-champion-tom-brady-nft-platform-autograph
+
+  - EFF's Evacide says internet-connected TV's are "a security nightmare." https://twitter.com/evacide/status/1378468180167823363
+
+  - A16Z published a new NFT canon. https://a16z.com/2021/04/02/nfts-readings-resources/
+
+  - Signal is considering adding crypto features. https://www.wired.com/story/mobilecoin-cryptocurrency/
+
+  - WSJ checked in on the launch of a digital yuan. https://www.wsj.com/articles/china-creates-its-own-digital-currency-a-first-for-major-economy-11617634118
+
+  - A new stablecoin hasn't been so stable. Fei is struggling in the early going. coindesk.com/1b-fei-stablecoins-rocky-start-is-a-wake-up-call-for-defi-investors
+
+  - Ripple won a court ruling to see the SEC's internal communications about cryptocurrencies. https://decrypt.co/64166/ripple-wins-ruling-expose-sec-docs-bitcoin-ethereum
+
+  - Grayscale Investments is planning a new ETF. https://grayscaleinvest.medium.com/grayscales-intentions-for-a-bitcoin-etf-b11e4faf4c05
+
+  - Industry heavyweights formed the Crypto Council for Innovation. https://www.wsj.com/articles/fidelity-square-coinbase-launch-bitcoin-trade-group-11617710402
 
   - Thiel on BTC as a national security vulnerability to the US. https://www.bloomberg.com/news/articles/2021-04-07/peter-thiel-calls-bitcoin-a-chinese-financial-weapon-at-virtual-roundtable?sref=Oeyjq8by
+
+  - Forbes sold a cover with the Winkelvoss twins as an NFT. https://niftygateway.com/itemdetail/primary/0xf9b9caf8af7dca665b3b5856adf8ca59f03fec1e/1
 
   - Dimon says crypto regulations in the US need to happen sooner rather than later. ((Need link))
 
