--- a/newsletter/2021-04-25.html
+++ b/newsletter/2021-04-25.html
@@ -4,8 +4,11 @@
 
   Some story candidates...
 
-  - TKTK
-  - TKTK
+  - Is Facebook buying off the New York Times? https://washingtonmonthly.com/2021/04/19/is-facebook-buying-off-the-new-york-times/
+
+  - Tesla crash. https://www.click2houston.com/news/local/2021/04/18/2-men-dead-after-fiery-tesla-crash-in-spring-officials-say/ | 
+
+  - Time magazine now accepts bitcoin for subscription payments. Salesforce founder Marc Benioff, who bought the venerable weekly in 2018, made the announcement on Twitter. https://twitter.com/Benioff/status/1384158203982745607 | https://www.nytimes.com/2018/09/16/business/dealbook/time-magazine-salesforce-marc-benioff.html
 
 
 
