Adding links from CoinDesk, Engadget, NY Post, etc

--- a/newsletter/2021-04-25.html
+++ b/newsletter/2021-04-25.html
@@ -6,9 +6,25 @@
 
   - Is Facebook buying off the New York Times? https://washingtonmonthly.com/2021/04/19/is-facebook-buying-off-the-new-york-times/
 
+  - Edward Snowden sold an NFT for a cool $5.5 million to benefit the Freedom of the Press Foundation. https://www.engadget.com/edward-snowden-nft-sold-for-55-million-080508241.html
+
+  - Seems ARK Investments is hodling a nice little chunk of Coinbase shares. Not entirely surprising tbh, but still interesting to see confirmation and details reported by Bitcoinist. https://bitcoinist.com/ark-invest-adds-350-million-in-coinbase-shares-a-crypto-bull-case/
+
+  - Microsoft says mandatory password changing is “ancient and obsolete.” https://arstechnica.com/information-technology/2019/06/microsoft-says-mandatory-password-changing-is-ancient-and-obsolete/
+
+  - The U.S. Postal Service is running a "covert operation program" to monitor Americans' social media posts. https://news.yahoo.com/the-postal-service-is-running-a-running-a-covert-operations-program-that-monitors-americans-social-media-posts-160022919.html?soc_src=social-sh&soc_trk=tw&tsrc=twtr
+
+  - PayPal-Owned Venmo adds bitcoin buying and selling. https://www.coindesk.com/paypal-expands-its-crypto-offerings-to-its-venmo-payments-app
+
+  - Even the New York Stock Exchange is hopping on the NFT bandwagon. https://twitter.com/NYSE/status/1381663467082543110
+
   - Tesla crash. https://www.click2houston.com/news/local/2021/04/18/2-men-dead-after-fiery-tesla-crash-in-spring-officials-say/ | 
 
   - Time magazine now accepts bitcoin for subscription payments. Salesforce founder Marc Benioff, who bought the venerable weekly in 2018, made the announcement on Twitter. https://twitter.com/Benioff/status/1384158203982745607 | https://www.nytimes.com/2018/09/16/business/dealbook/time-magazine-salesforce-marc-benioff.html
+
+  - The surprisingly cloak & dagger maneuvers to determine why the McDonald's soft-serve ice cream machine is never working. https://www.wired.com/story/they-hacked-mcdonalds-ice-cream-makers-started-cold-war/
+
+  - Amazing that scientists are *still* discovering new dinosaurs. Bonus points if they're cute ones that resemble Star Wars aliens. https://nypost.com/2021/04/16/scientists-discover-new-dinosaur-and-it-is-adorable/
 
 
 
