--- a/newsletter/2021-04-25.html
+++ b/newsletter/2021-04-25.html
@@ -4,7 +4,13 @@
 
   Some story candidates...
 
+  - The deputy governor of People's Bank of China says crypto tokens are "investment tools," not currencies. Hmmm... https://www.youtube.com/watch?v=JcBx8SlHuZ0
+
+  - Big luxury brands are partnering to form the Aura Blockchain Consortium to tackle the problem of knock-off goods. https://www.youtube.com/watch?v=4DHWiT3e5-g
+
   - Is Facebook buying off the New York Times? https://washingtonmonthly.com/2021/04/19/is-facebook-buying-off-the-new-york-times/
+
+  - The Wall Street Journal reports that Discord has halted merger talks with Microsoft & other acquisition prospects. Will do an IPO instead. https://www.wsj.com/articles/discord-ends-deal-talks-with-microsoft-11618938806
 
   - Edward Snowden sold an NFT for a cool $5.5 million to benefit the Freedom of the Press Foundation. https://www.engadget.com/edward-snowden-nft-sold-for-55-million-080508241.html
 
@@ -23,6 +29,8 @@
   - Time magazine now accepts bitcoin for subscription payments. Salesforce founder Marc Benioff, who bought the venerable weekly in 2018, made the announcement on Twitter. https://twitter.com/Benioff/status/1384158203982745607 | https://www.nytimes.com/2018/09/16/business/dealbook/time-magazine-salesforce-marc-benioff.html
 
   - The surprisingly cloak & dagger maneuvers to determine why the McDonald's soft-serve ice cream machine is never working. https://www.wired.com/story/they-hacked-mcdonalds-ice-cream-makers-started-cold-war/
+
+  - Ahead of the Falcon And The Winter Soldier finale on Friday, IGN checked in with folks who build & use *real* bionic arms to see what they think of the show. One telling anecdote: Engineer says one of most requested features is for an arm that can punch through walls or do other "destructive" stuff. But it always comes from people with 2 arms. People who are actually missing limbs worry about more mundane stuff. https://www.youtube.com/watch?v=hktNRhOBqoc
 
   - Amazing that scientists are *still* discovering new dinosaurs. Bonus points if they're cute ones that resemble Star Wars aliens. https://nypost.com/2021/04/16/scientists-discover-new-dinosaur-and-it-is-adorable/
 
