Adding some links from my recent Twitter posts.

--- a/newsletter/2021-04-25.html
+++ b/newsletter/2021-04-25.html
@@ -4,6 +4,20 @@
 
   Some story candidates...
 
+  - South Korea is cracking down on illicit activity involving cryptocurrencies. https://t.co/xMiPClPuqt?amp=1
+
+  - Coinbase: The CEO of Turkish crypto exchange Thodex has gone missing with users filing a complaint alleging that hundreds of millions of dollars have been stolen. https://t.co/AZdGNG0ItI?amp=1
+
+  - With the bitcoin hash rate down lately, transaction fees are way up. Groan... https://t.co/BlQZtu0JeH?amp=1
+
+  - In recognition of Earth Day, CoinDesk's Benjamin Powres took a look at the environmental impact of bitcoin. https://t.co/kihGAxGslL?amp=1
+
+  - The University of Minnesota has been banned from contributing to the #Linux kernel because they'd previously introduced buggy patches. https://t.co/KMnJtjHa4W?amp=1
+
+  - Grayscale acquired $1B in #crypto in a 24-hour period early last week. Yowza. https://t.co/AX9niUFsgH?amp=1
+
+  - WeWork now accepts bitcoin. https://t.co/txZgDzfeEE?amp=1
+
   - The deputy governor of People's Bank of China says crypto tokens are "investment tools," not currencies. Hmmm... https://www.youtube.com/watch?v=JcBx8SlHuZ0
 
   - Big luxury brands are partnering to form the Aura Blockchain Consortium to tackle the problem of knock-off goods. https://www.youtube.com/watch?v=4DHWiT3e5-g
