--- a/newsletter/2021-04-25.html
+++ b/newsletter/2021-04-25.html
@@ -1,58 +1,5 @@
 <doctype html>
 
-  <!--
-
-  Some story candidates...
-
-  - South Korea is cracking down on illicit activity involving cryptocurrencies. https://t.co/xMiPClPuqt?amp=1
-
-  - Coinbase: The CEO of Turkish crypto exchange Thodex has gone missing with users filing a complaint alleging that hundreds of millions of dollars have been stolen. https://t.co/AZdGNG0ItI?amp=1
-
-  - With the bitcoin hash rate down lately, transaction fees are way up. Groan... https://t.co/BlQZtu0JeH?amp=1
-
-  - In recognition of Earth Day, CoinDesk's Benjamin Powres took a look at the environmental impact of bitcoin. https://t.co/kihGAxGslL?amp=1
-
-  - The University of Minnesota has been banned from contributing to the #Linux kernel because they'd previously introduced buggy patches. https://t.co/KMnJtjHa4W?amp=1
-
-  - Grayscale acquired $1B in #crypto in a 24-hour period early last week. Yowza. https://t.co/AX9niUFsgH?amp=1
-
-  - WeWork now accepts bitcoin. https://t.co/txZgDzfeEE?amp=1
-
-  - The deputy governor of People's Bank of China says crypto tokens are "investment tools," not currencies. Hmmm... https://www.youtube.com/watch?v=JcBx8SlHuZ0
-
-  - Big luxury brands are partnering to form the Aura Blockchain Consortium to tackle the problem of knock-off goods. https://www.youtube.com/watch?v=4DHWiT3e5-g
-
-  - Is Facebook buying off the New York Times? https://washingtonmonthly.com/2021/04/19/is-facebook-buying-off-the-new-york-times/
-
-  - The Wall Street Journal reports that Discord has halted merger talks with Microsoft & other acquisition prospects. Will do an IPO instead. https://www.wsj.com/articles/discord-ends-deal-talks-with-microsoft-11618938806
-
-  - Edward Snowden sold an NFT for a cool $5.5 million to benefit the Freedom of the Press Foundation. https://www.engadget.com/edward-snowden-nft-sold-for-55-million-080508241.html
-
-  - Seems ARK Investments is hodling a nice little chunk of Coinbase shares. Not entirely surprising tbh, but still interesting to see confirmation and details reported by Bitcoinist. https://bitcoinist.com/ark-invest-adds-350-million-in-coinbase-shares-a-crypto-bull-case/
-
-  - Microsoft says mandatory password changing is “ancient and obsolete.” https://arstechnica.com/information-technology/2019/06/microsoft-says-mandatory-password-changing-is-ancient-and-obsolete/
-
-  - The U.S. Postal Service is running a "covert operation program" to monitor Americans' social media posts. https://news.yahoo.com/the-postal-service-is-running-a-running-a-covert-operations-program-that-monitors-americans-social-media-posts-160022919.html?soc_src=social-sh&soc_trk=tw&tsrc=twtr
-
-  - PayPal-Owned Venmo adds bitcoin buying and selling. https://www.coindesk.com/paypal-expands-its-crypto-offerings-to-its-venmo-payments-app
-
-  - Even the New York Stock Exchange is hopping on the NFT bandwagon. https://twitter.com/NYSE/status/1381663467082543110
-
-  - Tesla crash. https://www.click2houston.com/news/local/2021/04/18/2-men-dead-after-fiery-tesla-crash-in-spring-officials-say/ | 
-
-  - Time magazine now accepts bitcoin for subscription payments. Salesforce founder Marc Benioff, who bought the venerable weekly in 2018, made the announcement on Twitter. https://twitter.com/Benioff/status/1384158203982745607 | https://www.nytimes.com/2018/09/16/business/dealbook/time-magazine-salesforce-marc-benioff.html
-
-  - The surprisingly cloak & dagger maneuvers to determine why the McDonald's soft-serve ice cream machine is never working. https://www.wired.com/story/they-hacked-mcdonalds-ice-cream-makers-started-cold-war/
-
-  - Ahead of the Falcon And The Winter Soldier finale on Friday, IGN checked in with folks who build & use *real* bionic arms to see what they think of the show. One telling anecdote: Engineer says one of most requested features is for an arm that can punch through walls or do other "destructive" stuff. But it always comes from people with 2 arms. People who are actually missing limbs worry about more mundane stuff. https://www.youtube.com/watch?v=hktNRhOBqoc
-
-  - Amazing that scientists are *still* discovering new dinosaurs. Bonus points if they're cute ones that resemble Star Wars aliens. https://nypost.com/2021/04/16/scientists-discover-new-dinosaur-and-it-is-adorable/
-
-
-
--->
-
-
 <html lang="en">
 
   <head>
@@ -82,7 +29,7 @@
     <meta name="twitter:title" content="#Web3 Weekly">
     <meta name="twitter:description" content="A newsletter about decentralization, published every Sunday.">
     <meta name="twitter:creator" content="@Web3Weekly">
-    <meta name="twitter:image:src" content="https://images.unsplash.com/photo-1519389950473-47ba0277781c?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1350&amp;q=80">
+    <meta name="twitter:image:src" content="https://w3w.news/img/btc-chess-3500.jpg">
 
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -105,12 +52,74 @@
 
         <br>
 
-        <p>The latest decentralization headlines:</p>
+        <p><strong>Bitcoin had a (mostly) dismal week.</strong></p>
+        <p> To start with the obvious, prices slid more than 17%, leaving the token at its lowest point since early March and struggling to stay above $50,000 as of late Saturday. The bitcoin chain's hash rate is <a href="https://www.nasdaq.com/articles/despite-hash-rate-drop-surge-in-transaction-fees-bitcoin-is-resilient-2021-04-20">way down</a>, which means miners aren't making new coins as readily as usual. Transaction fees <a href="https://t.co/BlQZtu0JeH?amp=1">have leapt</a>. And market "whales" appear to be <a href="https://www.benzinga.com/markets/cryptocurrency/21/04/20767608/power-transaction-bitcoin-whales-move-over-6b-worth-of-crypto-in-a-day">getting antsy</a> as well.</p>
+        <p>And yet...</p>
+        <p>Even amid that barrage of bad news, the long-term trend of increased adoption of bitcoin by individuals and institutions alike has continued.</p>
+        <p>Venmo added <a href="https://www.coindesk.com/paypal-expands-its-crypto-offerings-to-its-venmo-payments-app">trading of four cryptocurrencies</a> to its app, including two different flavors of bitcoin, following the lead of parent company PayPal. WeWork said it will <a href="https://t.co/txZgDzfeEE?amp=1">accept bitcoin</a> for payments, as did the venerable <a href="https://twitter.com/Benioff/status/1384158203982745607">Time magazine</a>. And the New York Stock Exchange <a href="https://www.coindesk.com/nyse-files-to-list-shares-of-valkyries-bitcoin-etf">filed with regulators</a> to list an exchange-traded fund on bitcoin, pushing a longtime pipe dream for U.S. traders closer to reality.</p>
+        <p>Just in time for Earth Day, Square even published a <a href="https://assets.ctfassets.net/2d5q1td6cyxq/5mRjc9X5LTXFFihIlTt7QK/e7bcba47217b60423a01a357e036105e/BCEI_White_Paper.pdf">whitepaper</a> about bitcoin's potential as a <em>boon</em> to the environment. That runs diametrically opposite the usual narrative of BTC as a wasteful electricity hog.</p>
+        <p>So who knows? Maybe this thing isn't quite dead after all.</p>
+        <p>Other recent headlines regarding decentralization:</p>
 
         <ul>
-          <li><strong></strong><!-- --></li>
-          <li><strong></strong><!-- --></li>
-          <li><strong></strong><!-- --></li>
+
+
+          <li><strong>An Istanbul-based crypto exchange, Thodex, suddenly shut down under sketchy circumstances.</strong> The market's chief executive has <a href=" https://t.co/AZdGNG0ItI?amp=1">disappeared</a>, taking up to $2 billion in users' funds with him. Ouch.</li>
+
+          <li><strong>Grayscale investments acquired $1 billion in crypto</strong> in a 24-hour period early last week. <a href="https://t.co/AX9niUFsgH?amp=1">Yowza</a>.</li>
+
+          <li><strong>South Korea launched a crackdown</strong> on illicit activity involving cryptocurrencies. The effort will <a href="https://t.co/xMiPClPuqt?amp=1">span</a> several of the country's regulatory agencies.</li>
+
+          <li><strong>Discord will pursue an initial public offering rather than be acquired.</strong> The Wall Street Journal <a href="https://www.wsj.com/articles/discord-ends-deal-talks-with-microsoft-11618938806">reported</a> that the messaging startup has called off talks with Microsoft and other potential buyers.</li>
+
+          <li><strong>Edward Snowden sold a non-fungible token</strong> for a cool $5.5 million to <a href="https://www.engadget.com/edward-snowden-nft-sold-for-55-million-080508241.html">benefit</a> the Freedom of the Press Foundation.</li>
+
+          <li><strong>An anonymous donor paid for adoption fees at a Florida dog shelter using Dogecoin.</strong> The gift <a href="https://www.coindesk.com/doge-donation-daytona-florida-dog-shelter">covers</a> all dogs that are currently ready to be adopted. Awwww...</li>
+
+          <li><strong>So much for strongarm tactics.</strong> Ahead of the Falcon And The Winter Soldier finale on Friday, IGN <a href="https://www.youtube.com/watch?v=hktNRhOBqoc">checked in</a> with folks who build and use <em>real</em> bionic arms to see what they think of the show. One telling anecdote: The engineer IGN spoke to says she frequently gets feature requests for an arm that can punch through walls or do other "destructive" stuff along the lines of Marvel's Bucky Barnes. But the suggestion always comes from people with two arms. People who are actually missing limbs worry about more mundane stuff.</li>
+</li>
+
+
+
+          <!--
+
+          Some leftovers. Cut these for space...
+
+          - The U.S. Postal Service is running a "covert operation program" to monitor Americans' social media posts. https://news.yahoo.com/the-postal-service-is-running-a-running-a-covert-operations-program-that-monitors-americans-social-media-posts-160022919.html?soc_src=social-sh&soc_trk=tw&tsrc=twtr
+
+          - Microsoft says mandatory password changing is “ancient and obsolete.” https://arstechnica.com/information-technology/2019/06/microsoft-says-mandatory-password-changing-is-ancient-and-obsolete/
+
+          - Tesla may have had an autopilot-related crash.</strong><!-- Tesla crash. https://www.click2houston.com/news/local/2021/04/18/2-men-dead-after-fiery-tesla-crash-in-spring-officials-say/
+
+          - Is Facebook buying off the New York Times? https://washingtonmonthly.com/2021/04/19/is-facebook-buying-off-the-new-york-times/
+
+          - Coinbase insiders sold little of their stock in the exchange's recent public listing. https://twitter.com/fintechfrank/status/1384009278667689987
+
+          - Seems ARK Investments is hodling a nice little chunk of Coinbase shares. Not entirely surprising tbh, but still interesting to see confirmation and details reported by Bitcoinist. https://bitcoinist.com/ark-invest-adds-350-million-in-coinbase-shares-a-crypto-bull-case/
+
+          - Mitsubishi became the latest automaker to cut production because of the global chip shortage. https://www.bloomberg.com/news/articles/2021-04-23/mitsubishi-to-cut-16-000-units-globally-in-may-on-chip-shortage
+
+          - An ex-Trump administration regulator will become CEO of Binance U.S. Brian Brooks, an acting head of Office of the Comptroller of the Currency under Trump, will become CEO of Binance.US. https://www.wsj.com/articles/cryptocurrency-giant-binance-hires-former-top-bank-regulator-11618912800
+
+          - The University of Minnesota has been banned from contributing to the #Linux kernel because they'd previously introduced buggy patches.  https://t.co/KMnJtjHa4W?amp=1
+
+          - The deputy governor of People's Bank of China says crypto tokens are "investment tools," not currencies. https://www.youtube.com/watch?v=JcBx8SlHuZ0
+
+          - Big luxury brands are partnering to form the Aura Blockchain Consortium to tackle the problem of knock-off goods. https://www.youtube.com/watch?v=4DHWiT3e5-g
+
+          - The surprisingly cloak & dagger maneuvers to determine why the McDonald's soft-serve ice cream machine is never working. https://www.wired.com/story/they-hacked-mcdonalds-ice-cream-makers-started-cold-war/
+
+          - Even the New York Stock Exchange is hopping on the NFT bandwagon.</strong  https://twitter.com/NYSE/status/1381663467082543110
+
+          - Wall Street is warming to Dogecoin. https://www.theblockcrypto.com/daily/102197/dogecoin-surge-retail-institutional-investors
+
+
+
+          - Paleontologists discovered a new dinosaur.</strong> <!-- Amazing that scientists are still discovering new dinosaurs. Bonus points if they're cute ones that resemble Star Wars aliens. https://nypost.com/2021/04/16/scientists-discover-new-dinosaur-and-it-is-adorable/
+
+        -->
+
+
         </ul>
 
         <p><em><strong>That's it for now. Thanks for spending some time with the newsletter today! A full revision history of it, including earlier drafts, is available <a href="https://github.com/Indizr/web3weekly/commits/master">here</a> if you're interested. <!-- Remember to change or simply delete this next sentence for email blast. This version intended as website copy for w3w.news, really. --> If you'd like to get updates like this in your inbox every Sunday, please join our email list <a href="https://w3w.news">here</a>.</strong></em></p>
