Adding links on Wall St adopting crypto & more

--- a/newsletter/2021-05-02.html
+++ b/newsletter/2021-05-02.html
@@ -4,8 +4,23 @@
 
 Some story candidates...
 
-- tk
-- tk
+- Big Tech earnings came out: ((Need link))
+
+- Exclusive: The Energy Department has dropped its stretch goal for lithium-ion battery costs to $60/kWh, apparently influenced by Tesla and VW doing the same. https://t.co/CY3yu140ww?amp=1
+
+- The overlap between mindfulness and the WikiMedia moviement. https://t.co/ccJuPBXpsi?amp=1
+
+- Nexon joined the recent stream of companies buying bitcoin to hold in corporate cash reserves. https://t.co/GlViuar1Cm?amp=1
+
+- A Canadian company is looking to launch an Ethereum ETF. https://cointelegraph.com/news/ethereum-etfs-are-here-building-case-for-us-approval-of-btc-and-eth-funds
+
+- CoinDesk reports that JPMorgan is preparing to let its clients invest in a new bitcoin fund. https://t.co/u5eSyDfVks?amp=1
+
+- Infosec legend Daniel Kaminsky died at 42. https://www.nytimes.com/2021/04/27/technology/daniel-kaminsky-dead.html
+
+- PayPal's CEO gave an exclusive interview to Time. https://t.co/FByuzsBJKy?amp=1
+
+- Users in a small town in British Columbia loat internet access early last week after a beaver cheweed through a key cable. https://t.co/75eabxyoLk?amp=1
 
 -->
 
