Adding links re: Peloton, MetaMask, FB, etc.

--- a/newsletter/2021-05-09.html
+++ b/newsletter/2021-05-09.html
@@ -4,8 +4,21 @@
 
   Some story candidates...
 
-  - tk
-  - tk
+  - Peloton found itself on rough terrain regarding both safety and privacy. https://techcrunch.com/2021/05/05/peloton-bug-account-data-leak/?guccounter=1&guce_referrer=aHR0cHM6Ly93d3cubXNuLmNvbS8&guce_referrer_sig=AQAAALwremF_pWYZiXtP_KN8KN0Xszc33JkP2_4Z4XOfCe_vk3oUDh5j86jqRCBLWFcyxucZA8ZkYAM8z01MPoxG3TGiZuppMhBQiarI4AmQ_ibcmla_FBJT2IDbjqdFUIHjpo_4Kc5bwFxiFux0wl_TX2Yl46y_o_Sb6Kol_T9k1NPp   |    https://t.co/6gWvLIgLkX?amp=1
+
+  - Facebook is keeping Donald Trump off its service -- for now. https://t.co/9rMDMaN5Rt?amp=1 (Pickup MIT Tech Review link as well.)
+
+  - The Digital Dollar Project is pushing ahead. https://www.reuters.com/business/finance/digital-dollar-project-launch-five-us-central-bank-digital-currency-pilots-2021-05-03/
+
+  - Nas was a big winner in the recent Coinbase IPO. The hip-hop legend made over $40 million on an early investment in the crypto exchange. https://t.co/SzpOx7tUb7?amp=1
+
+  - EBay is hinting it may add crypto payments and NFT listings. https://t.co/Hgrw4E4Nyk?amp=1
+
+  - Bloomberg's Austin Carr thinks Apple's 30% cut of in-app sales may be due to change. https://t.co/p1cIgSVh5F?amp=1
+
+  - An MLS player is looking to get paid in bitcoin. https://t.co/c2SbAZqBHe?amp=1
+
+  - MetaMask usage has been booming along with ether prices. Laura Shin's Unchained podcast did a great episode on the topic. https://t.co/GBPMXkPZdc?amp=1
 
 -->
 
