Links on Uniswap upgrade, new a16z fund, etc.

--- a/newsletter/2021-05-09.html
+++ b/newsletter/2021-05-09.html
@@ -12,13 +12,34 @@
 
   - Nas was a big winner in the recent Coinbase IPO. The hip-hop legend made over $40 million on an early investment in the crypto exchange. https://t.co/SzpOx7tUb7?amp=1
 
-  - EBay is hinting it may add crypto payments and NFT listings. https://t.co/Hgrw4E4Nyk?amp=1
+  - EBay is hinting it may add crypto payments and NFT listings. https://t.co/Hgrw4E4Nyk?amp=1 | https://decrypt.co/69805/ebay-crypto-payments-nft-market
 
   - Bloomberg's Austin Carr thinks Apple's 30% cut of in-app sales may be due to change. https://t.co/p1cIgSVh5F?amp=1
 
   - An MLS player is looking to get paid in bitcoin. https://t.co/c2SbAZqBHe?amp=1
 
   - MetaMask usage has been booming along with ether prices. Laura Shin's Unchained podcast did a great episode on the topic. https://t.co/GBPMXkPZdc?amp=1
+
+  - CNBC reports a new partnership is forming to allow Americans to buy & hodl #bitcoin in old-school bank accounts soon. https://www.cnbc.com/2021/05/05/bitcoin-is-coming-to-hundreds-of-us-banks-says-crypto-firm-nydig-.html
+
+  - This is huge: Bitso is now Latin America's first #crypto unicorn. https://www.coindesk.com/2-2b-bitso-becomes-first-crypto-unicorn-in-latin-america
+
+  - The #Bitcoin network's Taproot upgrade is coming. https://www.coindesk.com/taproot-bitcoin-upgrade-improve-technology-software
+
+  - Mike Novogratz's Galaxy Digital bought BitGo. It was the industry's first billion-dollar acquisition. https://markets.businessinsider.com/currencies/news/mike-novogratz-galaxy-digital-buys-bitgo-cryptocurrency-acquisition-merger-bitcoin-2021-5-1030391163
+
+  - PayPal is weighing whether to launch its own stablecoin. https://www.theblockcrypto.com/post/103617/paypal-has-held-exploratory-talks-about-launching-a-stablecoin-sources
+
+  - Uniswap launched an upgrade to its mainnet. https://uniswap.org/blog/launch-uniswap-v3/
+
+  - Coinbase shares hit some turbulence. https://www.forbes.com/sites/greatspeculations/2021/05/06/whats-happening-with-coinbase-stock/?sh=2efb91421901&utm_source=TWITTER&utm_medium=social&utm_content=4792130272&utm_campaign=sprinklrForbesCrypto
+
+  - Doge and ETH hit new records. https://www.cnbc.com/2021/05/04/ethereum-eth-price-hits-record-high-above-3400.html | https://decrypt.co/69941/dogecoin-surges-to-0-69-becoming-fourth-largest-crypto
+
+  - Charlie Munger still hates bitcoin. https://www.coindesk.com/bitcoins-success-is-disgusting-berkshires-charlie-munger
+
+  - A16Z is launching a new $1 billion venture fund for crypto. https://www.coindesk.com/a16z-to-launch-1b-crypto-venture-fund-report
+
 
 -->
 
